# TRACER

./: README.md
MLIRFuzzer/: CMakeLists.txt  README.md
MLIRFuzzer/include/TosaGen/: create.h  opinfo.h  transfer.h  utils.h
MLIRFuzzer/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
MLIRFuzzer/src/: CMakeLists.txt  GetDialectName.cpp  MIX.cpp  OpsTowardPass copy.json  OpsTowardPass.json  empty.mlir  temp.json  tosa.mlir  tosaGen.cpp  tosaGenC.cpp  tosaGenU.cpp
MLIRFuzzer/utils/: CMakeLists.txt  create.cpp  opinfo.cpp  tosaOps.json  transfer.cpp  utils.cpp
fuzz_tool/: README.md  generator.sh  run_fuzz.sh
fuzz_tool/case/: empty.mlir
fuzz_tool/conf/: conf.yml  init.sql
fuzz_tool/src/: main.py
fuzz_tool/src/fuzz/: directed.py  fuzz.py  mutTest.py  pass_enum.py
fuzz_tool/src/generator/: tosaGen.py
fuzz_tool/src/utils/: __init__.py  config.py  dbutils.py  logger_tool.py  pass_analysis.py  passinfo.txt  test.py
